--- a/.github/workflows/garmin-sync-coros.yml
+++ b/.github/workflows/garmin-sync-coros.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 1,8,21 * * ?'
 env:
   GITHUB_NAME: BinYao721
-  GITHUB_EMAIL: freedom721007@163.com
+  GITHUB_EMAIL: freedom721007@gmail.com
   ## 佳明配置
   GARMIN_AUTH_DOMAIN: ${{ secrets.GARMIN_AUTH_DOMAIN }}
   GARMIN_EMAIL: ${{ secrets.GARMIN_EMAIL }}
